fix menu, add cancel button on mobile

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h2 {
         z-index: 1;
         width: 100vw;
         height: 10em;
-        box-shadow: inset -20px 151px 55px -52px rgba(255,255,255,1);
+        box-shadow: inset -10px 101px 30px -25px rgba(255,255,255,0.9);
     }
 }
 
@@ -78,7 +78,6 @@ h2 {
 @media (min-width: 56.26em) {
     .home__logo {
         margin-top: 0;
-        position: fixed;
     }
 }
 
@@ -91,6 +90,22 @@ h2 {
     background: url('data:image/svg+xml;utf8,<svg height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>');
     height: 2em;
     width: 2em;
+}
+
+@media (max-width: 56.25em) {
+    .site-nav-open .nav-toggler {
+        display: block;
+        background: url('data:image/svg+xml;utf8,<svg enable-background="new 0 0 32 32" height="32px" id="svg2" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"><g id="background"><rect fill="none" height="32" width="32"/></g><g id="cancel"><polygon points="2,26 6,30 16,20 26,30 30,26 20,16 30,6 26,2 16,12 6,2 2,6 12,16  "/></g></svg>');
+        z-index: 1;
+        position: fixed;
+        cursor: pointer;
+        border: none;
+        width: 10vw;
+        height: 10vw;
+        right: 5%;
+        top: 1em;
+        background-size: cover;
+    }
 }
 
 @media (min-width: 56.25em) {
